      encoding.  (PR{14958}.)

      \item If \command{R CMD INSTALL} is required to expand the
      \code{authors@R} field of the \file{DESCRIPTION} file, it tries
      harder to do so in the encoding specified for the package (rather
      than using ASCII escapes).

      \item \code{aov()} and \code{manova()} gave spurious warning about
      singular error model in the multiresponse case.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{X11()} window gains an icon: the
      latter may be especially useful on Ubuntu's \sQuote{Unity}
      interface.

      The \code{WM_CLASS} should be set in circumstances where the
      Window Manager failed to make use of X11 resource settings.

      (Contributed by Philip Johnson.)

      \item The \code{"Date"} and \code{"POSIXt"} methods for
      \code{cut()} will accept an unsorted \code{breaks} argument (as
      the default method does, although this was undocumented).
      (Wish of \PR{14961}.)

      \item Reference class methods that use other methods in an
      indirect way (e.g., by \code{sapply()}) must tell the code
      analysis to include that method.  They can now do so by invoking
      \code{$usingMethods()}. %$

      \item More Polish translations are available: for the
      \command{RGui} menus and for several recommended packages.

      \item Multistratum MANOVA works. In fact, it seems to have done so
      for years in spite of the help page claiming it did not.

      \item \code{qqline()} has new optional arguments
      \code{distribution}, \code{probs} and \code{qtype}, following the
      example of \pkg{lattice}'s \code{panel.qqmathline()}.

      \item The handling of single quotes in the \code{en@quot}
      pseudo-language has been slightly improved.

      \item New functions \code{checkPoFiles()} and \code{checkPoFile()}
      have been added to the \pkg{tools} package to check for