@@ -1,7 +1,7 @@
 /*
  *  Mathlib : A C Library of Special Functions
  *  Copyright (C) 1998 	     Ross Ihaka
- *  Copyright (C) 2000 	     The R Core Team
+ *  Copyright (C) 2000-12    The R Core Team
  *  Copyright (C) 2004--2005 The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -38,6 +38,6 @@ double qgeom(double p, double prob, int lower_tail, int log_p)
 #endif
 
     if (prob == 1) return(0);
-/* add a fuzz to ensure left continuity */
-    return ceil(R_DT_Clog(p) / log1p(- prob) - 1 - 1e-7);
+/* add a fuzz to ensure left continuity, but value must be >= 0 */
+    return fmax2(0, ceil(R_DT_Clog(p) / log1p(- prob) - 1 - 1e-12));
 }
